--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,5 @@
-# These individuals contributed to the hbnb project in this repository 
 
-Ezra Nobrega    <ezra.nobrega@outlook.com>
-Justin Majetich <justinmajetich@gmail.com>
-Aquimo Adriano  <aquimoadriano@gmail.com>
+
+Original Athours:
+Miranda Evans miranda.r.evans@gmail.com
+Kevin Yook kevin.yook@holbertonschool.com
